--- a/app.yaml
+++ b/app.yaml
@@ -6,9 +6,9 @@ runtime: python38
 instance_class: F2
 
 handlers:
-- url: /static
-  static_dir: styles
-
+- url: /covid_app/static
+  static_dir: covid_app/styles
+  
 - url: /.*
   secure: always
   redirect_http_response_code: 301
